RESOLVED FIXED231126
[LFC][IFC] Moving hanging whitespace sequence handling to Line
https://bugs.webkit.org/show_bug.cgi?id=231126
Summary [LFC][IFC] Moving hanging whitespace sequence handling to Line
alan
Reported 2021-10-02 16:42:52 PDT
ssia
Attachments
Patch (14.35 KB, patch)
2021-10-02 17:04 PDT, alan
no flags
Patch (14.38 KB, patch)
2021-10-02 18:05 PDT, alan
no flags
Patch (14.91 KB, patch)
2021-10-02 20:24 PDT, alan
no flags
Patch (14.60 KB, patch)
2021-10-03 08:56 PDT, alan
no flags
[fast-cq]Patch (14.51 KB, patch)
2021-10-03 11:43 PDT, alan
no flags
alan
Comment 1 2021-10-02 17:04:55 PDT
alan
Comment 2 2021-10-02 18:05:17 PDT
alan
Comment 3 2021-10-02 20:24:08 PDT
alan
Comment 4 2021-10-03 08:56:41 PDT
EWS
Comment 5 2021-10-03 10:47:24 PDT
ChangeLog entry in Source/WebCore/ChangeLog contains OOPS!.
alan
Comment 6 2021-10-03 11:43:43 PDT
Created attachment 440011 [details] [fast-cq]Patch
EWS
Comment 7 2021-10-03 11:46:25 PDT
Committed r283474 (242448@main): <https://commits.webkit.org/242448@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 440011 [details].
Radar WebKit Bug Importer
Comment 8 2021-10-03 11:47:16 PDT
Note You need to log in before you can comment on or make changes to this bug.