[LFC][IFC] Moving hanging whitespace sequence handling to Line https://bugs.webkit.org/show_bug.cgi?id=231126

Reviewed by Antti Koivisto.

Let the Line handle the whitespace hanging. Line::HangingTrailingContent will eventually gain more functionality.
This is also in preparation for fixing imported/w3c/web-platform-tests/css/css-text/white-space/textarea-pre-wrap-014.html

* layout/formattingContexts/inline/InlineLine.cpp:
(WebCore::Layout::Line::Line):
(WebCore::Layout::Line::visuallyCollapseHangingOverflow):
(WebCore::Layout::Line::HangingTrailingContent::HangingTrailingContent):
(WebCore::Layout::Line::HangingTrailingContent::width const):
* layout/formattingContexts/inline/InlineLine.h:
(WebCore::Layout::Line::hangingWhitespaceWidth const):
(WebCore::Layout::Line::Run::shouldTrailingWhitespaceHang const):
(WebCore::Layout::Line::Run::isOverflowWhitespaceHanging const): Deleted. shouldTrailingWhitespaceHang is a more descriptive name.
* layout/formattingContexts/inline/InlineLineBoxBuilder.cpp:
(WebCore::Layout::horizontalAlignmentOffset):
(WebCore::Layout::LineBoxBuilder::build):
(WebCore::Layout::hangingGlyphWidth): Deleted.
* layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::layoutInlineContent):
* layout/formattingContexts/inline/InlineLineBuilder.h:


Canonical link: https://commits.webkit.org/242448@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283474 268f45cc-cd09-0410-ab3c-d52691b4dbfc